2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* gcompris/bonus/lion_good.png: new bonus from Mathieu Ignacio. Released under GPL.
	* gcompris/bonus/lion_bad.png:
	* docs/C/python.xml:
	* src/boards/memory.c: (player_win):
	* src/boards/py-mod-bonus.c: (python_gcompris_bonus_module_init):
	* src/gcompris/bonus.c: (gc_bonus_display):
	* src/gcompris/bonus.h:

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/imageid.xml.in: reverted stupid change in r2503, the boarddir needs to be set
	* src/boards/scale.c: (scale_anim_plate): changed the color of the text.

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/scale.c: (scale_anim_plate): fixed fuzzy plate by Miguel, now on the right plate.

2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/cardimage/*: New image set for the memory cards. The images are from
	                      Mathieu Ignacio (mignacio at april point org).
	                      They are released under the GPL.
	* src/boards/memory.c: (create_item): fixed to use new image set.

	* src/boards/scale.c: (get_weight_plate), (scale_anim_plate),
	(scale_item_move_to), (scale_drag_event), (scale_list_add_object),
	(scale_next_level), (process_ok): Added a warning at level 2:
	                                  Take care, you can drop masses on both sides of the scale.

2007-03-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/clickgame.xml.in: minor, removed resource definition
	* boards/menu.xml.in:
	* src/gcompris/gcompris.c:

	* boards/Makefile.am: splitted geography and geography_country
	* boards/geography.xml.in:
	* boards/geography/Makefile.am:
	* boards/geography/board10_0.xml.in:
	* boards/geography/board5_0.xml.in:
	* boards/geography/board6_0.xml.in:
	* boards/geography/board7_0.xml.in:
	* boards/geography/board8_0.xml.in:
	* boards/geography/board9_0.xml.in:
	* boards/geography/board9_1.xml.in:
	* boards/geography/board9_2.xml.in:
	* boards/geography_country/Makefile.am:
	* configure.in: